OLMIS-1956: Fixed covered label

--- a/src/main/webapp/openlmis-form/form.scss
+++ b/src/main/webapp/openlmis-form/form.scss
@@ -96,7 +96,7 @@ form {
 
 	> * {
 		display: block;
-		flex: 1 0 auto;
+		flex: 1 0 0;
 		min-width: 100%;
     margin: 0.2em 0px;
 	}
